# Auto-Youtube

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  SELF-AUDIT-MULTIACC.md  SELF-AUDIT.md  TEST-ROTATION-SUCCESS.md  pyproject.toml  rename_channel.py  requirements.txt  set_handle.py
agent-harness/cli_anything/auto_youtube/: auto_youtube_cli.py
agent-harness/cli_anything/auto_youtube/core/: accounts.py  analytics.py  autoreply.py  comments.py  limits.py  manager.py  optimizer.py  session.py  smart.py  studio.py  uploader.py
crawl-data/: an-dashboard.json  an-overview.json  an-video-lealmted3Zw.json  an5.json  cm-list.json  cm-probe.json  cm-probe2.json  cm-probe3.json  cm-probe4.json  del-probe.json  del3.json  mgr-get-lealmted3Zw.json  mgr-list-shorts.json  probe-an2.json  probe-an3.json  probe-an4.json  probe-rows.json  probe2.json  probe3.json  sched-probe.json  sched-probe2.json  studio-flow-audit-analytics.html  studio-flow-audit-audience.html  studio-flow-audit-content.html  studio-flow-audit-copyright.html  studio-flow-audit-customization.html  studio-flow-audit-monetization.html  studio-flow-audit-playlists.html  studio-flow-audit-selectors.json  upload-dialog-selectors.json  verify-reply.json  verify-reply2.json  verify-video-state.json  vis-widget.json
deploy/: yt-forever.service
docs/: ARCHITECTURE.md  SELF-AUDIT.md  SETUP.md
examples/: batch_upload.py  upload_single.sh
state/: accounts.json  rate_minhfrommars.json  rate_state.json  rate_tanso_nacha.json
tests/: test_accounts.py  test_smart_limits.py
(+1 files in other folders)
