[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "auto-youtube"
version = "1.0.0"
description = "Agent-native YouTube automation CLI — HumanMode + Playwright, quota-free, 50/day hard cap"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "NachaFromMars" }]
requires-python = ">=3.10"
keywords = ["youtube", "automation", "playwright", "humanmode", "cli", "ai-agent", "openclaw"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
    "Topic :: Multimedia :: Video",
]
dependencies = [
    "click>=8.1",
    "playwright>=1.59",
]

[project.urls]
Homepage = "https://github.com/NachaFromMars/Auto-Youtube"
Repository = "https://github.com/NachaFromMars/Auto-Youtube"

[project.scripts]
auto-youtube = "auto_youtube.auto_youtube_cli:cli"

[tool.setuptools.packages.find]
where = ["agent-harness/cli_anything"]
include = ["auto_youtube*"]
